GUI is now fully integrated with the system